resources/sass/_sidebar.sass
.container-page
        gap: 2rem
        width: 100%
        display: grid
        min-height: 100dvh
        grid-template-columns: 40rem 1fr
        grid-template-areas: "sidebar main"

        .sidebar
            width: 40rem
            display: flex
            height: 100dvh
            position: fixed
            grid-area: sidebar
            background: $cards
            box-shadow: $shadow
            transition: $standar
            border-radius: $br-rad
            flex-direction: column
            justify-content: space-between

            .items-sidebar
                display: flex
                flex-direction: column
                justify-content: space-between

                .logo-sidebar
                    display: flex
                    width: inherit
                    position: relative
                    height: fit-content
                    justify-content: space-around


                    a
                        transform: translateX(9%)

                        img
                            width: 27rem
                            height: 27rem
                            position: relative
                            margin-right: 5rem

                    a .logo-short
                        opacity: 0
                        width: 10rem
                        height: 10rem
                        cursor: default
                        position: absolute

                    .hamburguer-icon
                        width: 4rem
                        height: 4rem
                        cursor: pointer
                        translate: 0 1rem
                        transition: $standar

                .nav-links
                    height: 50rem
                    display: flex
                    align-items: center
                    flex-direction: column
                    justify-content: space-around
                    transition: $standar
                    transition-delay: calc( .1s * var(--i))

                    .icons-sidebar
                        width: 4rem
                        height: 4rem

                    a
                        width: 37rem
                        display: flex
                        color: #000
                        text-align: left
                        align-items: center
                        margin-left: 2.7rem
                        pointer-events: auto
                        text-decoration: none
                        font-size: $title-card

                        .hidden
                            opacity: 1
                            z-index: -1000
                            margin-left: 2rem
                            transition: $standar
                            transition-delay: calc( .1s * var(--i))

            .settings-dropdown
                width: 40rem
                height: 15rem
                display: flex
                align-items: end
                margin-bottom: 2rem

                .dropdown-content
                    width: 30rem
                    height: 8rem
                    bottom: 7rem
                    left: 1.5rem
                    display: flex
                    cursor: pointer
                    position: absolute
                    align-items: center
                    flex-direction: column
                    justify-content: space-evenly

                    a
                        color: #000
                        width: 18rem
                        display: flex
                        translate: 0 -1rem
                        text-align: center
                        align-items: center
                        transition: $standar
                        text-decoration: none
                        font-size: $subtitle-card

                        &:hover
                            transition: $standar
                            border-radius: $br-rad
                            background: $background

                    .img-logout
                        height: 4rem
                        width: 4rem

                    button
                        border: none
                        display: flex
                        cursor: pointer
                        margin-bottom: 1rem
                        align-items: center
                        transition: $standar
                        padding-block: .2rem
                        border-radius: $br-rad
                        background: $background
                        font-size: $subtitle-card

                        &:active
                            transform: scale(.9)


                .dropdown-trigger
                    width: 43rem
                    height: 5rem
                    display: flex
                    cursor: pointer
                    align-items: center
                    justify-content: space-evenly

                    .img-sidebar
                        width: 4rem
                        height: 4rem
                        margin-left: 1.5rem

                    .btn-profile
                        border: none
                        width: 30rem
                        display: flex
                        cursor: pointer
                        margin-left: 3rem
                        align-items: center
                        translate: -3.5rem 0
                        justify-content: start
                        font-size: $title-card
                        background: transparent
                        transition-delay: calc( .1s * var(--i))
        main
                transition: $standar


        // ? SIDEBAR COLLAPSE POR MEDIO DE JS

        &.container-page.sidebar-collapsed
            grid-template-columns: 10rem 1fr

            .sidebar
                width: 10rem


                .items-sidebar

                    .logo-sidebar

                        .img-logo
                            opacity: 0
                            margin: 0
                            cursor: default

                        .logo-short
                            opacity: 1
                            cursor: pointer
                            position: absolute

                        .hamburguer-icon
                            position: absolute
                            left: 12rem
                            transition: $standar

                    .nav-links
                        width: 10rem
                        height: 60rem
                        translate: 0 -10rem

                        a
                            width: 10rem
                            height: 3rem
                            pointer-events: none

                            .icons-sidebar
                                translate: 1.5rem 0
                                pointer-events: auto

                            .hidden
                                opacity: 0
                                cursor: default
                                z-index: -10000
                                translate: -4rem
                                visibility: hidden
                                pointer-events: none

                .settings-dropdown

                    .dropdown-trigger

                        .btn-profile
                            opacity: 0
                            cursor: default
                            pointer-events: none
                            transform: translateX(-4rem)

                    .dropdown-content

                        a
                            width: 4rem
                            height: 4rem
                            translate: -11.7rem -1rem


                        button
                            width: 4rem
                            height: 4rem
                            padding-block: 0
                            translate: -11.3rem 0

                            .img-logout
                                margin-left: -.5rem

                        .span-logout
                            opacity: 0
                            z-index: -10000
                            cursor: default
                            translate: -4rem
                            visibility: hidden
                            pointer-events: none

        .container-menu-mobile
            display: none
            cursor: default
            pointer-events: none
            
        main
            grid-area: main
            margin-left: 6rem
            transition: $standar


//  todo PC DE 14 Y 15 INCH

@media screen and (max-width: 1299px) and (min-width: 1212px)
    .container-page
            display: grid
            grid-template-columns: 25rem 1fr

            .sidebar
                width: 25rem

                .items-sidebar

                    .logo-sidebar
                        height: 15rem

                        a

                            img
                                width: 13rem
                                height: 13rem
                                transition: $standar

                            .logo-short
                                width: 8rem
                                height: 8rem

                        .hamburguer-icon
                            width: 2.6rem
                            height: 2.6rem
                            margin-left: -3rem

                    .nav-links
                        height: 35rem
                        margin-top: -4rem

                        .icons-sidebar
                            width: 3rem
                            height: 3rem
                            transition: $standar

                        a
                            width: 25rem
                            font-size: $description-card - .1rem


                .settings-dropdown
                    width: 25rem
                    height: 8rem
                    display: flex
                    align-items: end
                    margin-bottom: 1rem

                    .dropdown-trigger
                        width: 25rem
                        height: 4rem
                        transition: $standar

                        .img-sidebar
                            width: 3rem
                            height: 3rem
                            margin-left: 1.5rem

                        .btn-profile
                            margin-left: 5rem
                            font-size: $description-card - .1rem

                    .dropdown-content
                        left: -.3rem
                        width: 25rem
                        height: 4rem
                        bottom: 7.5rem

                        .img-logout
                            height: 3rem
                            width: 3rem

                        a
                            width: 12rem
                            height: 4rem
                            font-size: $description-card - .3rem

                        button
                            height: 4rem
                            font-size: $description-card - .3rem

            &.container-page.sidebar-collapsed

                .sidebar

                    .items-sidebar

                        .logo-short
                            translate: .7rem 0

                        .hamburguer-icon
                            margin-left: -.5rem

                        .nav-links
                            height: 35rem
                            translate: 0 0


                .dropdown-trigger
                    margin-left: 1.5rem
                    transition: $standar

                .dropdown-content
                    margin-left: 4rem

                    a

                    button
                        width: 3rem
                        height: 3rem

            .main
                left: 5rem
                transition: $standar

